# GitSwitch

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build-macos.sh  build-windows.ps1  build.rs  build.sh  install.ps1  test_minimal.rs
.github/workflows/: ci.yml  release.yml  rust_tests.yml
docs/: README.md  build-system.md  development-guide.md  project-overview.md  testing-guide.md
src/: analytics.rs  backup.rs  commands.rs  commands_new.rs  completions.rs  config.rs  detection.rs  error.rs  git.rs  main.rs  manpages.rs  profiles.rs  repository.rs  ssh.rs  templates.rs  utils.rs  validation.rs
tests/: cli_integration_tests.rs  comprehensive_platform_tests.rs  enhanced_features_tests.rs
wix/: git-switch.wxs
