[package]
name = "git-switch"
version = "0.1.0" # Restored base version. Actual version for CLI will come from build.rs if git repo.
edition = "2024"
authors = ["Ren Hoshizora <blackswordman@gmail.com>"]
description = "CLI tool to switch between multiple Git accounts"
license = "MIT"
build = "build.rs"

[dependencies]
shellexpand = "3.1"
clap = { version = "4", features = ["derive"] }
dirs = "5.0.1"
home = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[package.metadata.deb]
maintainer = "Ren Hoshizora <blackswordman@gmail.com>"
copyright = "2023, Ren Hoshizora <blackswordman@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = """
git-switch allows users to manage and switch between multiple Git accounts.
It handles SSH key management and Git configuration updates automatically.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/git-switch",
        "usr/bin/git-switch",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/git-switch/README.md",
        "644",
    ],
]

[package.metadata.rpm]
package = "git-switch"
license = "MIT"
requires = ["git", "openssh"]

[package.metadata.rpm.files]
"target/release/git-switch" = { path = "/usr/bin/git-switch", mode = "755" }
"README.md" = { path = "/usr/share/doc/git-switch/README.md", mode = "644" }
