[package]
name = "git-switch"
version = "0.1.1" # Restored base version. Actual version for CLI will come from build.rs if git repo.
edition = "2024"
authors = ["Ren Hoshizora <blackswordman@gmail.com>"]
description = "CLI tool to switch between multiple Git accounts"
license = "MIT"
build = "build.rs"

[dependencies]
shellexpand = "3.1.1"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
home = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"
# Security-focused dependencies
keyring = "3.6.2"
zeroize = "1.6"
rand = "0.9.1"
base64 = "0.22.1"
# Better UX dependencies
colored = "3.0.0"
indicatif = "0.17"
dialoguer = "0.11"
# Better configuration format
toml = "0.8"
# Enhanced logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Email validation
email_address = "0.2"
# SSH key handling
ssh-key = "0.6"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Shell completions and man pages
clap_complete = "4.4"
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[package.metadata.deb]
maintainer = "Ren Hoshizora <blackswordman@gmail.com>"
copyright = "2023, Ren Hoshizora <blackswordman@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = """
git-switch allows users to manage and switch between multiple Git accounts.
It handles SSH key management and Git configuration updates automatically.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/git-switch",
        "usr/bin/git-switch",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/git-switch/README.md",
        "644",
    ],
]

[package.metadata.rpm]
package = "git-switch"
license = "MIT"
requires = ["git", "openssh"]

[package.metadata.rpm.files]
"target/release/git-switch" = { path = "/usr/bin/git-switch", mode = "755" }
"README.md" = { path = "/usr/share/doc/git-switch/README.md", mode = "644" }
"LICENSE" = { path = "/usr/share/doc/git-switch/LICENSE", mode = "644" }

[package.metadata.generate-rpm]
# Attempt to satisfy "Missing field: package.assets" error
# Define assets here, using "dest" for destination path as expected by cargo-generate-rpm.
assets = [
  { source = "target/release/git-switch", dest = "/usr/bin/git-switch", mode = "0755" },
  { source = "README.md", dest = "/usr/share/doc/git-switch/README.md", mode = "0644" },
  { source = "LICENSE", dest = "/usr/share/doc/git-switch/LICENSE", mode = "0644" }
]
# You might also want to specify other RPM fields here if needed, for example:
# release = "1%{?dist}"
# summary = "CLI tool to switch between multiple Git accounts"
# description = "git-switch allows users to manage and switch between multiple Git accounts. It handles SSH key management and Git configuration updates automatically."
# [package.metadata.generate-rpm.changelog]
# "* $(shell date +'%a %b %d %Y') Ren Hoshizora <blackswordman@gmail.com> - %{{version}}-1" = ["Automated RPM release."]
